# S2CombatLogAgent

./: .dockerignore  .env.example  .gitignore  .replit  AGENT_FIXES_SUMMARY.md  Dockerfile  Dockerfile.debug  README.md  README_DOCKER.md  app.py  cli.py  docker-compose.yml  load.py  pyproject.toml  replit.nix  requirements-agents.txt  requirements-all.txt  requirements-replit.txt  requirements.txt  run_cli.py  run_query_analyst_tests.py  run_streamlit.py  setup.py  setup_replit.sh  simple_agent_test.py  simple_cli.py  simple_test.py  test_agents.py  test_dimensional_queries.py  test_followup_agent.py  test_multi_query.py  test_pipeline_multi_query.py  test_single_query.py
agent_notes/: agent_techspec.md  agentnotes.md  followup_predictor_agent_spec.md  notebook.md  parser_technical_specification.md  project_checklist.md  project_structure.md  requirements.txt  technical_spec.md
agent_notes/special_notes/: agent_data_package.md  agent_templates.md  agentapidoc.md  agentsapi.md  combatlog_agent.md  openai_examples.md  (+3 more)
data/: schema_cache.json
examples/: agent_example.py  data_analyst_guardrail_example.py  full_pipeline_example.py  multi_agent_test.py  pipeline_example.py  query_analyst_example.py  response_composer_guardrail_example.py  simple_agent_handoff.py  visualization_guardrail_example.py
scripts/: EXPORT_README.md  README.md  export_to_excel.py  integration_test.py
smite2_agent/: __main__.py  app.py  requirements.txt  streamlit_app.py
smite_parser/: models.py  parser.py
tests/: test_guardrails.py  test_streamlit_app.py  test_streamlit_integration.py
(+49 files in other folders)
