[tool.poetry]
name = "smite2-combat-log-agent"
version = "0.1.0"
description = "SMITE 2 Combat Log Agent - An AI-powered analysis tool for SMITE 2 combat logs"
authors = ["Stewart Chisam <stewartchisam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.27.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
plotly = "^5.13.0"
sqlparse = "^0.4.3"
sqlalchemy = "^2.0.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
requests = "^2.30.0"
tqdm = "^4.65.0"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 